Fixed Login and CharacterDetails not showing
Adjusted login css and fixed character details route

--- a/my-vue-app/src/CSS/login.css
+++ b/my-vue-app/src/CSS/login.css
@@ -1,14 +1,18 @@
 /* Login.css */
 
 .login-container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 2rem;
-  background-color: #f7fafc;
-  border: 1px solid #edf2f7;
-  border-radius: 0.5rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+    align-items: center; /* Center align items */
+    justify-content: center; /* Center items vertically */
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    background-image: url('../assets/wallpaper3.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 
 .login-container h2 {
   font-size: 1.5rem;
